--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-requests
+asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
+Django==4.0.5
+gunicorn==20.1.0
+idna==3.3
+requests==2.28.1
+sqlparse==0.4.2
+tzdata==2022.1
+urllib3==1.26.9
